--- a/com.cloudbees.eclipse-feature/.project
+++ b/com.cloudbees.eclipse-feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.cloudbees.eclipse.feature</name>
+	<name>com.cloudbees.eclipse-feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
