--- a/com.cloudbees.eclipse.updatesite/buckminster_product.properties
+++ b/com.cloudbees.eclipse.updatesite/buckminster_product.properties
@@ -1,15 +1,9 @@
 buckminster.output.root=G:/cbreleng/output
 buckminster.temp.root=G:/cbreleng/temp
 
-# sdkpath=file:/G:/eclipse-java-helios-SR1
-
 # How .qualifier in versions should be replaced
 # qualifier.replacement.*=generator:lastRevision
 
-target.os=*
-target.ws=*
-target.arch=*
-
-# target.os=win32
-# target.ws=win32
-# target.arch=x86
+target.os=win32
+target.ws=win32
+target.arch=x86
