--- a/com.cloudbees.eclipse.ui/plugin.xml
+++ b/com.cloudbees.eclipse.ui/plugin.xml
@@ -57,38 +57,10 @@
             id="com.cloudbees.eclipse.ui.views.JobsView">
       </view>
 
-      <view
-            name="Job Details"
-            icon="icons/16x16/cb_plain.png"
-            allowMultiple="true"
-            class="com.cloudbees.eclipse.ui.views.jobdetails.JobDetailsView"
-            id="com.cloudbees.eclipse.ui.views.jobdetails.JobDetailsView">            
-      </view>
-
    </extension>
    
    <extension
          point="org.eclipse.ui.perspectiveExtensions">
-      <perspectiveExtension
-            targetID="org.eclipse.jdt.ui.JavaPerspective">
-         <view
-               ratio="0.5"
-               relative="org.eclipse.ui.views.TaskList"
-               relationship="right"
-               id="com.cloudbees.eclipse.ui.views.NectarTreeView">
-         </view>
-      </perspectiveExtension>
-
-      <perspectiveExtension
-            targetID="org.eclipse.ui.resourcePerspective">
-         <view
-               ratio="0.5"
-               relative="org.eclipse.ui.views.TaskList"
-               relationship="right"
-               id="com.cloudbees.eclipse.ui.views.nectartree.NectarTreeView">
-         </view>
-      </perspectiveExtension>
-
       <perspectiveExtension
             targetID="org.eclipse.jdt.ui.JavaPerspective">
          <view
@@ -113,8 +85,8 @@
 
  <extension point="org.eclipse.ui.editors">
        <editor
-             class="com.cloudbees.eclipse.ui.views.jobdetails.JobDetailsPart"
-             id="com.cloudbees.eclipse.ui.views.jobdetails.JobDetailsPart"
+             class="com.cloudbees.eclipse.ui.views.build.BuildPart"
+             id="com.cloudbees.eclipse.ui.views.build.BuildPart"
              name="Build details">
        </editor>
   </extension>
