Added name field to job response Changed icons and titles for views (now plain cb icon) Added sorting for job table state, job, and build times columns Implemented proper view table content description label so it also shows view name

--- a/com.cloudbees.eclipse.ui/plugin.xml
+++ b/com.cloudbees.eclipse.ui/plugin.xml
@@ -43,15 +43,15 @@
       </category>
       
       <view
-            name="CloudBees CI"
-            icon="icons/jobs_view6.png"
+            name="CloudBees"
+            icon="icons/16x16/cb_plain.png"
             category="com.cloudbees.eclipse"
             class="com.cloudbees.eclipse.ui.views.nectartree.NectarTreeView"
             id="com.cloudbees.eclipse.ui.views.nectartree.NectarTreeView">
       </view>
       <view
-            name="CI Jobs"
-            icon="icons/jobs_view6.png"
+            name="Build Jobs"
+            icon="icons/16x16/cb_plain.png"
             category="com.cloudbees.eclipse"
             class="com.cloudbees.eclipse.ui.views.jobs.JobsView"
             id="com.cloudbees.eclipse.ui.views.JobsView">
