Fixed QTree parser bug to handle commas Added trivial tests for QTree Added sample toolbar button for actions Finalized basic layout for build view

--- a/com.cloudbees.eclipse.ui/plugin.xml
+++ b/com.cloudbees.eclipse.ui/plugin.xml
@@ -56,6 +56,11 @@
             class="com.cloudbees.eclipse.ui.views.jobs.JobsView"
             id="com.cloudbees.eclipse.ui.views.JobsView">
       </view>
+      <view
+            class="com.cloudbees.eclipse.ui.views.build.Tee"
+            id="com.cloudbees.eclipse.ui.views.build.Tee"
+            name="New ViewPart">
+      </view>
 
    </extension>
    
