long jobs are run with progress service or as scheduled job; fixed tree update model; renamed Nectar to Jenkins everywhere in UI

--- a/com.cloudbees.eclipse.ui/plugin.xml
+++ b/com.cloudbees.eclipse.ui/plugin.xml
@@ -15,7 +15,7 @@
             class="com.cloudbees.eclipse.ui.internal.preferences.NectarInstancesPreferencePage"
             id="com.cloudbees.eclipse.ui.preferences.NectarInstancesPreferencePage"
             category="com.cloudbees.eclipse.ui.preferences.GeneralPreferencePage"            
-            name="Nectar">
+            name="Jenkins">
       </page>
 
    </extension>
