--- a/com.cloudbees.eclipse.core/.classpath
+++ b/com.cloudbees.eclipse.core/.classpath
@@ -4,9 +4,12 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/gson-1.6.jar" sourcepath="lib-src/gson-1.6-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.0.3.jar" sourcepath="lib-src/httpclient-4.0.3-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.0.1.jar" sourcepath="lib-src/httpclient-4.0.3-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.1.jar" sourcepath="lib-src/httpcomponents-client-4.1-src.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpclient-cache-4.1.jar" sourcepath="lib-src/httpcomponents-client-4.1-src.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.1.jar" sourcepath="lib-src/httpcomponents-core-4.1-src.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpcore-nio-4.1.jar" sourcepath="lib/httpcore-nio-4.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpmime-4.1.jar" sourcepath="lib-src/httpcomponents-client-4.1-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
