--- a/com.cloudbees.eclipse.ui/plugin.xml
+++ b/com.cloudbees.eclipse.ui/plugin.xml
@@ -12,8 +12,8 @@
       </page>
 
       <page
-            class="com.cloudbees.eclipse.ui.internal.preferences.NectarInstancesPreferencePage"
-            id="com.cloudbees.eclipse.ui.preferences.NectarInstancesPreferencePage"
+            class="com.cloudbees.eclipse.ui.internal.preferences.JenkinsInstancesPreferencePage"
+            id="com.cloudbees.eclipse.ui.preferences.JenkinsInstancesPreferencePage"
             category="com.cloudbees.eclipse.ui.preferences.GeneralPreferencePage"            
             name="Jenkins">
       </page>
@@ -46,8 +46,8 @@
             name="CloudBees"
             icon="icons/16x16/cb_plain.png"
             category="com.cloudbees.eclipse"
-            class="com.cloudbees.eclipse.ui.views.nectartree.NectarTreeView"
-            id="com.cloudbees.eclipse.ui.views.nectartree.NectarTreeView">
+            class="com.cloudbees.eclipse.ui.views.instances.JenkinsTreeView"
+            id="com.cloudbees.eclipse.ui.views.instances.JenkinsTreeView">
       </view>
       <view
             name="Build Jobs"
@@ -55,11 +55,6 @@
             category="com.cloudbees.eclipse"
             class="com.cloudbees.eclipse.ui.views.jobs.JobsView"
             id="com.cloudbees.eclipse.ui.views.JobsView">
-      </view>
-      <view
-            class="com.cloudbees.eclipse.ui.views.build.Tee"
-            id="com.cloudbees.eclipse.ui.views.build.Tee"
-            name="New ViewPart">
       </view>
 
    </extension>
@@ -72,7 +67,7 @@
                ratio="0.5"
                relative="org.eclipse.ui.views.TaskList"
                relationship="right"
-               id="com.cloudbees.eclipse.ui.views.nectartree.NectarTreeView">
+               id="com.cloudbees.eclipse.ui.views.instances.JenkinsTreeView">
          </view>
       </perspectiveExtension>
 
@@ -82,7 +77,7 @@
                ratio="0.5"
                relative="org.eclipse.ui.views.TaskList"
                relationship="right"
-               id="com.cloudbees.eclipse.ui.views.nectartree.NectarTreeView">
+               id="com.cloudbees.eclipse.ui.views.instances.JenkinsTreeView">
          </view>
       </perspectiveExtension>
 
