--- a/com.cloudbees.eclipse.core/build.properties
+++ b/com.cloudbees.eclipse.core/build.properties
@@ -3,9 +3,12 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               lib/gson-1.6.jar,\
-               lib/commons-codec-1.3.jar,\
+               truststore,\
+               lib/commons-codec-1.4.jar,\
                lib/commons-logging-1.1.1.jar,\
-               lib/httpclient-4.0.3.jar,\
-               lib/httpcore-4.0.1.jar,\
-               truststore
+               lib/gson-1.6.jar,\
+               lib/httpclient-4.1.jar,\
+               lib/httpclient-cache-4.1.jar,\
+               lib/httpcore-4.1.jar,\
+               lib/httpcore-nio-4.1.jar,\
+               lib/httpmime-4.1.jar
