Tweaked welcome intro page text Added team.ui dep to get the icons for changeset view Configured better default locations for the cb views in resource and java perspective Added configure cb action Made sure by default jenkins tree model is expanded to level 2 Fixed bug so that properties change for CB settings is triggering reload for jenkins tree and job list

--- a/com.cloudbees.eclipse.ui/plugin.xml
+++ b/com.cloudbees.eclipse.ui/plugin.xml
@@ -64,9 +64,9 @@
       <perspectiveExtension
             targetID="org.eclipse.jdt.ui.JavaPerspective">
          <view
-               ratio="0.5"
-               relative="org.eclipse.ui.views.TaskList"
-               relationship="right"
+               ratio="0.7"
+               relative="org.eclipse.jdt.ui.PackageExplorer"
+               relationship="bottom"
                id="com.cloudbees.eclipse.ui.views.instances.JenkinsTreeView">
          </view>
       </perspectiveExtension>
@@ -74,13 +74,30 @@
       <perspectiveExtension
             targetID="org.eclipse.ui.resourcePerspective">
          <view
-               ratio="0.5"
-               relative="org.eclipse.ui.views.TaskList"
-               relationship="right"
+               ratio="0.7"
+               relative="org.eclipse.ui.views.ContentOutline"               
+               relationship="stack"
                id="com.cloudbees.eclipse.ui.views.instances.JenkinsTreeView">
          </view>
       </perspectiveExtension>
 
+      <perspectiveExtension
+            targetID="org.eclipse.jdt.ui.JavaPerspective">
+         <view
+               relative="org.eclipse.ui.views.ProblemView"
+               relationship="stack"
+               id="com.cloudbees.eclipse.ui.views.JobsView">
+         </view>
+      </perspectiveExtension>
+
+      <perspectiveExtension
+            targetID="org.eclipse.ui.resourcePerspective">
+         <view
+               relative="org.eclipse.ui.views.TaskList"               
+               relationship="stack"
+               id="com.cloudbees.eclipse.ui.views.JobsView">
+         </view>
+      </perspectiveExtension>
    </extension>
 
  <extension point="org.eclipse.ui.editors">
@@ -91,4 +108,6 @@
              name="Build details">
        </editor>
   </extension>
+
+  
 </plugin>
