checks Forge at start; restores jobs selection on reload; opens new Jobs view for every service (broken atm); polls open Jobs view every 30 sec

--- a/com.cloudbees.eclipse.ui/plugin.xml
+++ b/com.cloudbees.eclipse.ui/plugin.xml
@@ -73,7 +73,8 @@
             icon="icons/jobs_view6.png"
             category="com.cloudbees.eclipse"
             class="com.cloudbees.eclipse.ui.views.jobs.JobsView"
-            id="com.cloudbees.eclipse.ui.views.JobsView">
+            id="com.cloudbees.eclipse.ui.views.JobsView"
+            allowMultiple="true">
       </view>
 
    </extension>
