--- a/com.cloudbees.eclipse.ui/build.properties
+++ b/com.cloudbees.eclipse.ui/build.properties
@@ -4,4 +4,6 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               intro/
+               intro/,\
+               plugin.properties
+src.includes = icons/
